More tweaks to JVM args